# gg_psigg

./: .gitignore  CMakeLists.txt  FindPythia8.cmake  FindROOT.cmake
amps/: calcKK.c++  calcKK_0.c++  calcKK_1.c++  calcKK_10.c++  calcKK_11.c++  calcKK_12.c++  calcKK_13.c++  calcKK_14.c++  calcKK_15.c++  calcKK_16.c++  calcKK_17.c++  calcKK_18.c++  calcKK_19.c++  calcKK_2.c++  calcKK_20.c++  calcKK_21.c++  calcKK_22.c++  calcKK_23.c++  calcKK_24.c++  calcKK_25.c++  calcKK_26.c++  calcKK_27.c++  calcKK_28.c++  calcKK_29.c++  calcKK_3.c++  calcKK_30.c++  calcKK_31.c++  calcKK_4.c++  calcKK_5.c++  calcKK_6.c++  calcKK_7.c++  calcKK_8.c++  calcKK_9.c++  calc_Amps.c++
conf/: cms.conf  lhcb.conf
globals/: algebra.cpp  algebra.h  config.cpp  config.h  global_kinematics.cpp  global_kinematics.h
nlo/: Rambo3.cpp  Rambo3.h  nlo_kinematics.cpp  nlo_kinematics.h  nlo_main.cpp
root/: export_hists.cpp  export_parton_cs.cpp  rescale.cpp  root-utils.cpp  root-utils.h
templates/: abbreviations.cpp  abbreviations.h  amplitude.cpp  amplitudes.h
util/: Random.h  color_util.h  common_util.cpp  common_util.h
